# Land-Registry-Agent

./: .env.example  .gitignore  GOLDEN_SCENARIOS.md  README.md  main.py  problem_statement.md  pyproject.toml
src/land_registry_agent/: __init__.py  analysis.py  config.py  data.py  intent.py  llm.py  models.py  orchestrator.py  repository.py  skills.py
tests/: test_analysis.py  test_intent.py  test_live_connections.py  test_llm.py  test_orchestrator.py  test_planning.py  test_repository.py  test_verification.py
