[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"


[project]
name = "land-registry-agent"
version = "0.1.0"
description = "A human-approved LangGraph harness for UK property research."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-sqlite>=3.0,<4",
    "openai>=2.0,<3",
    "pandas>=2.2,<4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "streamlit>=1.40,<2",
]


[project.optional-dependencies]
dev = [
    "mypy>=1.14,<2",
    "pandas-stubs>=2.2",
    "pytest>=8.3,<10",
    "ruff>=0.9,<1",
]


[tool.hatch.build.targets.wheel]
packages = ["src/land_registry_agent"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]


[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
extend-exclude = ["data_sources.py"]


[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]


[tool.ruff.lint.isort]
known-first-party = ["land_registry_agent"]


[tool.mypy]
python_version = "3.12"
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ["data_sources.py"]
